test/spec_vectors/try_table/fail/module_8.wat
(module (tag) (func (try_table (catch_ref 0 0))))